# minimalloc

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  README_python.md  pyproject.toml  setup.py  test_minimal.py
benchmarks/asplos2024/: A.1048576.csv  B.1048576.csv  C.1048576.csv  D.1048576.csv  E.1048576.csv  F.1048576.csv  G.1048576.csv  H.1048576.csv  I.1048576.csv  J.1048576.csv  K.1048576.csv
benchmarks/challenge/: A.1048576.csv  D.1048576.csv  K.1048576.csv
benchmarks/challenging/: G.1048576.csv  J.1048576.csv
benchmarks/examples/: input.12.csv
build_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
python/benchmarks/: benchmark.ipynb
python/examples/: basic_usage.py  benchmark.ipynb  benchmark_example.py  buffer_only.py
python/minimalloc/: __init__.py  _bindings.cpp  _core.cpp  cli.py  utils.py
python/tests/: test_basic.py  test_bindings.py  test_cli.py  test_converter.py  test_minimalloc.py  test_solver.py  test_sweeper.py  test_utils.py  test_validator.py
scripts/: run-challenging-compare.sh  run-challenging-python.sh  run-challenging.sh
src/: converter.cc  converter.h  main.cc  minimalloc.cc  minimalloc.h  solver.cc  solver.h  sweeper.cc  sweeper.h  validator.cc  validator.h
tests/: converter_test.cc  minimalloc_test.cc  solver_test.cc  sweeper_test.cc  validator_test.cc
